--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,18 @@
-h1 {
-  color: red;
-}
+@import "global/fonts.scss";
+@import "global/variables.scss";
+@import "global/mixin.scss";
+@import "global/global.scss";
+@import "global/general.scss";
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+// @import "blocks/promo.scss";
+// @import "blocks/advantages.scss";
+// @import "blocks/about.scss";
+// @import "blocks/services.scss";
+// @import "blocks/services-card.scss";
+// @import "blocks/feedback.scss";
+// @import "blocks/footer.scss";
+// @import "blocks/sections.scss";
+@import "blocks/overlay.scss";
+@import "blocks/modal.scss";
+
