--- a/source/sass/blocks/nav-list.scss
+++ b/source/sass/blocks/nav-list.scss
@@ -2,9 +2,23 @@
   display: flex;
   justify-content: space-evenly;
   padding-left: 21px;
+
+  @media (max-width: $desktop-width) {
+    padding: 0;
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
 }
 .nav-list__item {
   padding-right: 10px;
+
+  @media (max-width: $desktop-width) {
+    margin-bottom: 21px;
+    font-family: $poppins;
+    font-size: 24px;
+    line-height: 36px;
+    color: $basic-white;
+  }
 }
 .nav-list__link {
 }
