--- a/source/sass/blocks/sub-list.scss
+++ b/source/sass/blocks/sub-list.scss
@@ -1,7 +1,18 @@
 .sub-list {
   display: none;
+  font-family: $poppins;
+  font-size: 18px;
+  line-height: 23px;
+  color: $basic-white;
+
+  @media (max-width: $desktop-width) {
+    flex-direction: column;
+  }
 }
 .sub-list__item {
+  @media (max-width: $desktop-width) {
+    margin-bottom: 20px;
+  }
 }
 .sub-list__link {
 }
