--- a/source/sass/blocks/user-menu.scss
+++ b/source/sass/blocks/user-menu.scss
@@ -5,7 +5,14 @@
 }
 
 .user-menu__modal-login {
+  @media (max-width: $desktop-width) {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 40px;
+  }
 }
+
 .user-menu__cart {
   padding-left: 31px;
 
@@ -18,7 +25,6 @@
       display: none;
     }
   }
-
 }
 
 .user-menu__icon {
