--- a/source/sass/blocks/sub-list.scss
+++ b/source/sass/blocks/sub-list.scss
@@ -3,7 +3,7 @@
   font-family: $poppins;
   font-size: 18px;
   line-height: 23px;
-  color: $basic-white;
+  color: $sub-white;
 
   @media (max-width: $desktop-width) {
     flex-direction: column;
