--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -6,6 +6,14 @@
   max-width: 1366px;
   margin: 0 auto;
   padding: 130px 98px 0;
+
+  @media (max-width: $desktop-width) {
+    padding: 130px 45px 0;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding: 130px 15px 0;
+  }
 }
 
 .main__gallery {
