--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,6 +6,7 @@ $bg-black: #000000;
 $bg-range: #f0eae4;
 $border-grey: #f6f5f4;
 $field-white: rgba(255, 255, 255, 0.15);
+$sub-white: rgba(255, 255, 255, 0.75);
 $filter-brown: rgba(86, 64, 52, 0.7);
 $placeholder-grey: #9b9997;
 $text-black: #1d1613;
