--- a/source/sass/blocks/footer-social.scss
+++ b/source/sass/blocks/footer-social.scss
@@ -7,7 +7,6 @@
   @media (max-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -15px;
   }
 }
 
@@ -17,8 +16,14 @@
     margin-bottom: 24px;
   }
 
+  @media (max-width: $desktop-width) {
+    &:not(:last-child) {
+      margin-bottom: 22px;
+    }
+  }
+
   @media (max-width: $tablet-width) {
-    margin: 0 16px 15px;
+    margin: 0 36px 15px 0;
   }
 }
 
@@ -42,6 +47,9 @@
   @media (max-width: $tablet-width) {
     & p {
       display: none;
+    }
+    & svg {
+      transform: scale(1.5);
     }
   }
 }
