--- a/source/sass/blocks/form-footer.scss
+++ b/source/sass/blocks/form-footer.scss
@@ -5,7 +5,7 @@
 
   & input {
     width: 100%;
-    padding: 5px 0;
+    padding: 5px 10px 5px 0;
     padding-right: 10px;
 
     font-weight: 500;
@@ -24,6 +24,20 @@
       color: $basic-black;
       background-color: $basic-white;
       outline: none;
+    }
+  }
+
+  @media(max-width: $desktop-width) {
+    & input {
+      width: 77%;
+      margin-right: 29px;
+      padding: 5px 10px 5px 0;
+    }
+  }
+
+  @media(max-width: $tablet-width) {
+    & input {
+      width: 66%;
     }
   }
 }
