Сетка для блока галерея и блог

--- a/source/sass/blocks/new-items.scss
+++ b/source/sass/blocks/new-items.scss
@@ -9,8 +9,7 @@
   }
 }
 .new-items__link {
-  margin: 0 50px 28px;
-  // text-align: center;
+  margin: 35px 50px 28px;
 }
 .new-items__container {
 }
