--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -7,10 +7,40 @@
     @include title;
   }
 }
+
 .blog__link {
+  margin: 35px 50px 28px;
 }
+
 .blog__list {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  width: 100%;
+
+  @media (max-width: $desktop-width) {
+    grid-gap: 50px;
+    grid-template-columns: unset;
+    grid-template-rows: unset;
+  }
+
+  @media (max-width: $tablet-width) {
+    grid-gap: 40px;
+  }
 }
+
 .blog__item {
+  display: flex;
+}
+
+.blog__item:nth-child(3n) {
+  grid-column: 2/3;
+  grid-row: 1/3;
+
+  @media (max-width: $desktop-width) {
+    grid-column: unset;
+    grid-row: unset;
+  }
 }
 
