--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -8,9 +8,56 @@
   }
 }
 .gallery__link {
+  margin: 35px 50px 28px;
 }
 
 .gallery__list {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 27px;
+  row-gap: 34px;
+
+  @media (max-width: $tablet-width) {
+    grid-gap: 15px;
+    grid-template-columns: 44.8% auto;
+    grid-template-rows: 35% 24% 32%;
+  }
 }
-.gallery__item {
+.gallery__item--big {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+
+  @media (max-width: $tablet-width) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
 }
+
+.gallery__item picture,
+.gallery__item img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+  object-fit: cover;
+  object-position: center center;
+}
+
+.gallery__item:nth-child(7n + 3) {
+  @media (max-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.gallery__item:nth-child(7n + 4) {
+  @media (max-width: $tablet-width) {
+    display: none;
+  }
+}
+
+
+
