--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -1,10 +1,114 @@
 .post {
+  display: grid;
+  width: 100%;
+  background-color: $bg-beige;
+  grid-template-columns: 1fr 1fr;
+
+  @media (max-width: $tablet-width) {
+    grid-template-columns: unset;
+    grid-template-rows: 1fr 1fr;
+  }
 }
-.post__content {
-}
+
 .post__img {
+  position: relative;
+  order: -1;
+  width: 100%;
 }
+
 .post__img--second {
+  order: 1;
+
+  @media (max-width: $tablet-width) {
+    order: -1;
+  }
 }
+
 .post--big {
+  grid-row-gap: 30px;
+  grid-template-rows: 1fr 1fr;
+
+  & .post__content {
+    position: relative;
+    z-index: 1;
+
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  & .post__img {
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+  }
+
+  @media (max-width: $desktop-width) {
+    grid-row-gap: unset;
+    grid-template-rows: unset;
+
+    & .post__img {
+      grid-column: unset;
+      grid-row: unset;
+    }
+
+    & .post__content {
+      grid-column: unset;
+      grid-row: unset;
+    }
+  }
+
+  @media (max-width: $tablet-width) {
+    grid-template-rows: 1fr 1fr;
+  }
+}
+
+.post__img picture,
+.post__img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  object-fit: cover;
+  object-position: center center;
+}
+
+.post__content {
+  padding: 65px 60px 70px 60px;
+  text-align: center;
+  background-color: $bg-beige;
+
+  @media (max-width: $desktop-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-right: 85px;
+    padding-left: 85px;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding: 30px 60px 32px 60px;
+  }
+}
+
+.post__content time {
+  display: block;
+  margin: 0;
+  margin-bottom: 15px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  color: $placeholder-grey;
+}
+
+.post__content h3 {
+  margin: 0;
+  margin-bottom: 35px;
+
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 34px;
+  font-family: $cormorant;
+  color: $basic-black;
 }
