--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/promo.scss";
 @import "blocks/new-items.scss";
 @import "blocks/blog.scss";
+@import "blocks/post.scss";
 @import "blocks/faq.scss";
 @import "blocks/gallery.scss";
 @import "blocks/footer.scss";
