--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,8 @@
 @import "blocks/main.scss";
 @import "blocks/promo.scss";
 @import "blocks/new-items.scss";
+@import "blocks/product-card.scss";
+@import "blocks/slider.scss";
 @import "blocks/blog.scss";
 @import "blocks/post.scss";
 @import "blocks/faq.scss";
