--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,17 +1,188 @@
 .faq {
+  margin-bottom: 50px;
+  padding-top: 20px;
+  text-align: center;
+  background-color: $basic-white;
+
+  @media (max-width: $desktop-width) {
+    padding-top: 0;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding: 18px 15px 0 15px;
+  }
+
   & h2 {
     @include title;
+    letter-spacing: 0.03em;
   }
 }
+
 .faq__list {
+  border: 1px solid $basic-brown;
 }
+
 .faq__item {
+  position: relative;
+  padding: 40px 42px;
+  text-align: left;
+
+  &:not(:first-child) {
+    border-top: 1px solid $basic-brown;
+  }
+
+  @media (max-width: $desktop-width){
+    padding: 41px 50px;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding: 18px 25px;
+  }
 }
+
+.faq__item h3 {
+  margin: 0;
+  margin-right: 50px;
+
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 23px;
+
+  @media (max-width: $tablet-width) {
+    margin-right: 55px;
+
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
+
+.faq__item:nth-of-type(4n + 2) h3 {
+  @media (max-width: $tablet-width) {
+    margin-right: 90px;
+  }
+}
+
+.faq__item:nth-of-type(4n + 3) h3 {
+  @media (max-width: $tablet-width) {
+    margin-right: 75px;
+  }
+}
+
+.faq__item:nth-of-type(4n) h3 {
+  @media (max-width: $tablet-width) {
+    margin-right: 25px;
+  }
+}
+
+.faq__item p {
+  max-width: 527px;
+  margin: 0;
+  margin-right: 45px;
+  margin-left: 8px;
+  padding-top: 8px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+
+  @media (max-width: $desktop-width) {
+    max-width: unset;
+    margin-left: 0;
+    padding-top: 27px;
+  }
+
+  @media (max-width: $tablet-width) {
+    margin-right: 33px;
+    padding-top: 12px;
+
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
 .faq__button {
+  display: none;
 }
-.faq__icon {
+
+.faq--js .faq__item:not(.faq__item--open) {
+  padding-bottom: 48px;
+
+  @media (max-width: $tablet-width) {
+    padding-bottom: 20px;
+  }
 }
-.faq__icon--open {
+
+.faq--js p {
+  display: none;
 }
+
+.faq__item--open p {
+  display: block;
+}
+
+.faq--js .faq__button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  padding-top: 50px;
+  padding-right: 48px;
+
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
+  &:focus,
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  &:active {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+  @media (max-width: $desktop-width) {
+    padding-right: 52px;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding-top: 25px;
+    padding-right: 25px;
+  }
+}
+
+.faq__button svg {
+  color: $basic-brown;
+
+  pointer-events: none;
+
+  fill: transparent;
+
+  @media (max-width: $desktop-width) {
+    transform: scale(1.5);
+  }
+
+  @media (max-width: $tablet-width) {
+    transform: scale(1.3);
+  }
+}
+
 .faq__icon--close {
+  display: none;
+}
+
+.faq__item--open .faq__icon--open {
+  display: none;
+}
+
+.faq__item--open .faq__icon--close {
+  display: block;
 }
