--- a/source/sass/blocks/new-items.scss
+++ b/source/sass/blocks/new-items.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 0;
+  overflow: hidden;
 
   & h2 {
     @include title;
@@ -13,7 +15,15 @@
 }
 
 .new-items__container {
-  display: flex;
-  flex-direction: column;
   width: 100%;
+  max-width: 100%;
+  margin: 0 0 52px;
+
+  @media (max-width: $desktop-width) {
+    margin: 0 0 42px;
+  }
+
+  @media (max-width: $tablet-width) {
+    margin: 0 0 33px;
+  }
 }
