--- a/source/sass/blocks/new-items.scss
+++ b/source/sass/blocks/new-items.scss
@@ -3,7 +3,15 @@
   flex-direction: column;
   align-items: center;
   min-width: 0;
-  overflow: hidden;
+  width: calc(100vw - 17px);
+
+  @media (max-width: $desktop-width) {
+    padding: 10px 45px 55px;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding: 20px 15px 34px;
+  }
 
   & h2 {
     @include title;
@@ -15,9 +23,10 @@
 }
 
 .new-items__container {
-  width: 100%;
-  max-width: 100%;
-  margin: 0 0 52px;
+  position: relative;
+  // max-width: 100%;
+  // margin: 0 0 52px;
+  overflow: hidden;
 
   @media (max-width: $desktop-width) {
     margin: 0 0 42px;
