--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,21 +1,25 @@
 .slider {
-  position: relative;
+  width: 100%;
+  height: 403px;
 }
 
-.slider__list {
-  // display: flex;
-  // justify-content: flex-start;
-}
+// .slider__item {
+//   max-width: 100%;
+//   height: 356px;
+// }
+
+// .slider__item:last-child {
+//   margin-right: 0;
+// }
 
 .slider__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
+  &:not(:last-child) {
+    margin: 0 30px 0 0;
 
-.slider__item:last-child {
-  margin-right: 0;
+    @media (max-width: $desktop-width) {
+      width: calc((100% - 30px) / 2);
+    }
+  }
 }
 
 .slider__button-container {
@@ -105,4 +109,10 @@
     line-height: 21px;
     letter-spacing: 2px;
   }
+}
+
+.swiper-slide img {
+  display: block;
+  max-width: 100%;
+  height:auto;
 }
