--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,10 @@
 @import "blocks/main.scss";
 @import "blocks/promo.scss";
 @import "blocks/new-items.scss";
+@import "blocks/swiper/swiper-vars.scss";
+@import "blocks/swiper/swiper.scss";
+@import "blocks/swiper/pagination.scss";
+@import "blocks/swiper/navigation.scss";
 @import "blocks/product-card.scss";
 @import "blocks/slider.scss";
 @import "blocks/blog.scss";
