--- a/source/sass/blocks/new-in.scss
+++ b/source/sass/blocks/new-in.scss
@@ -14,119 +14,10 @@
   }
 }
 
-.new-in--product-card {
-  margin-bottom: 126px;
-}
-
-// .new-in__title {
-//   margin-bottom: -106px;
-
-//   & h2 {
-//     @include title;
-//     margin: 0 50px 28px;
-//   }
-// }
-
-// .new-in__link-all {
-//     position: relative;
-//     display: block;
-//     width: 120px;
-//     margin: 0 auto;
-//     margin-bottom: 60px;
-//     font-family: $poppins;
-//     font-weight: 500;
-//     font-size: 16px;
-//     line-height: 130%; /* or 21px */
-//     color: $basic-black;
-//     text-align: center;
-
-//     &::after {
-//       position: absolute;
-//       right: 0;
-//       bottom: 0;
-//       left: 0;
-//       width: 80px;
-//       height: 1px;
-//       margin: 0 auto;
-//       background-color: #a87b62;
-//       content: "";
-//     }
-
-//     &:hover,
-//     &:focus {
-//       color: $brown;
-
-//       &::after {
-//         display: none;
-//       }
-//     }
-// }
-
 .new-in__slider {
   width: 100%;
   min-height: 505px;
   overflow: hidden;
-}
-
-// .new-in__card {
-//   max-width: 270px;
-
-//   & h3 {
-//     margin: 0;
-//     margin-bottom: 8px;
-//     font-family: $poppins;
-//     font-weight: 500;
-//     font-size: 16px;
-//     line-height: 130%; /* or 21px */
-//     color: $basic-black;
-//     text-align: center;
-//   }
-
-//   & span {
-//     display: block;
-//     margin-bottom: 10px;
-//     font-weight: bold;
-//     font-size: 14px;
-//     line-height: 130%; /* or 18px */
-//     color: $basic-black;
-//     text-align: center;
-//   }
-// }
-.new-in__card {
-  display: grid;
-  grid-template-rows: 284px auto auto;
-  max-width: 270px;
-
-  & h3 {
-    margin: 0;
-    margin-bottom: 8px;
-    font-family: $poppins;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 21px;
-    color: $basic-black;
-    text-align: center;
-  }
-
-  & span {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 18px;
-    color: $basic-black;
-    text-align: center;
-  }
-}
-
-.new-in__card-image {
-  margin-bottom: 21px;
-
-  & img {
-    display: block;
-    height: 100%;
-    object-fit: cover;
-  }
 }
 
 // Контролс
@@ -135,7 +26,6 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  // margin-top: -107px;
   margin-bottom: 90px;
   z-index: 10;
 }
@@ -188,89 +78,89 @@
 }
 
 // Tablet
-@media (max-width: $desktop-width) {
-  .new-in {
-    margin-bottom: 66px;
-  }
+// @media (max-width: $desktop-width) {
+//   .new-in {
+//     margin-bottom: 66px;
+//   }
 
-  .new-in--product-card {
-    margin-bottom: 75px;
-  }
+//   .new-in--product-card {
+//     margin-bottom: 75px;
+//   }
 
-  .new-in__title {
-    margin-bottom: -97px;
-    h2 {
-      margin-bottom: 21px;
-    }
-  }
+//   .new-in__title {
+//     margin-bottom: -97px;
+//     h2 {
+//       margin-bottom: 21px;
+//     }
+//   }
 
-  .new-in__link-all {
-    margin-bottom: 54px;
+//   .new-in__link-all {
+//     margin-bottom: 54px;
 
-    &::after {
-      bottom: -4px;
-    }
-}
+//     &::after {
+//       bottom: -4px;
+//     }
+// }
 
-  .new-in__slider {
-    width: 678px;
-    height: 449px;
-  }
+//   .new-in__slider {
+//     width: 678px;
+//     height: 449px;
+//   }
 
-  .new-in__card {
-    width: 324px;
-    max-width: 100%;
-  }
+//   .new-in__card {
+//     width: 324px;
+//     max-width: 100%;
+//   }
 
-  .new-in__slider-controls {
-    margin-bottom: 78px;
+//   .new-in__slider-controls {
+//     margin-bottom: 78px;
 
-    svg {
-      width: 37px;
-      height: 15px;
-    }
-  }
-}
+//     svg {
+//       width: 37px;
+//       height: 15px;
+//     }
+//   }
+// }
 
-// Mobile
-@media (max-width: $tablet-width) {
-  .new-in {
-    margin-bottom: 55px;
-  }
+// // Mobile
+// @media (max-width: $tablet-width) {
+//   .new-in {
+//     margin-bottom: 55px;
+//   }
 
-  .new-in__title {
-    margin-bottom: 40px;
-  }
+//   .new-in__title {
+//     margin-bottom: 40px;
+//   }
 
-  .new-in--product-card {
-    margin-bottom: 66px;
-  }
+//   .new-in--product-card {
+//     margin-bottom: 66px;
+//   }
 
-  .new-in__link-all {
-    margin-bottom: 44px;
-  }
+//   .new-in__link-all {
+//     margin-bottom: 44px;
+//   }
 
-  .new-in__slider {
-    width: 100%;
-    height: auto;
-    margin-bottom: 22px;
-  }
+//   .new-in__slider {
+//     width: 100%;
+//     height: auto;
+//     margin-bottom: 22px;
+//   }
 
-  .new-in__card-image {
-    margin-bottom: 16px;
-  }
+//   .new-in__card-image {
+//     margin-bottom: 16px;
+//   }
 
-  .new-in__slider-controls {
-    display: none;
-  }
+//   .new-in__slider-controls {
+//     display: none;
+//   }
 
 
-  .new-in__card {
-    width: 100%;
-  }
+//   .new-in__card {
+//     width: 100%;
+//   }
 
-  // .swiper-pagination-current {
-  //   padding-right: 5px;
-  //   padding-left: 5px;
-  // }
-}
+//   // .swiper-pagination-current {
+//   //   padding-right: 5px;
+//   //   padding-left: 5px;
+//   // }
+// }
