--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/main.scss";
 @import "blocks/promo.scss";
 @import "blocks/new-in.scss";
+@import "blocks/product-card.scss";
 @import "blocks/blog.scss";
 @import "blocks/post.scss";
 @import "blocks/faq.scss";
