--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,18 +1,12 @@
 .header {
   position: relative;
-  display: flex;
-  justify-content: flex-start;
-  outline: 1px solid blue;
-  max-width: $desktop;
+  margin-bottom: 20px;
   min-height: 154px;
-  width: 100%;
-  padding: 41px 96px 0;
-  margin: 0 auto 20px;
 
   &::after {
     content: "";
     position: absolute;
-    bottom: 36%;
+    bottom: 26%;
     left: 0;
     width: 100%;
     height: 1px;
@@ -21,7 +15,6 @@
 
   @media (max-width: $desktop-width) {
     min-height: 106px;
-    padding: 52px 44px 0 32px;
 
     &::after {
       content: none;
@@ -30,8 +23,28 @@
 
   @media (max-width: $tablet-width) {
     min-height: 92px;
-    padding: 38px 15px 50px;
     margin-bottom: 0;
+  }
+}
+
+.header__container {
+  display: flex;
+  justify-content: flex-start;
+  max-width: $desktop;
+  width: 100%;
+  padding: 41px 96px 0;
+  margin: 0 auto;
+
+  @media (max-width: $desktop-width) {
+    padding: 52px 44px 0;
+
+    &::after {
+      content: none;
+    }
+  }
+
+  @media (max-width: $tablet-width) {
+    padding: 38px 15px 50px;
   }
 }
 
@@ -44,11 +57,11 @@
   }
 
   @media (max-width: $tablet-width) {
-    padding-bottom: 10px;
+    padding-bottom: 14px;
   }
 }
+
 .header__logo {
-  outline: 1px solid blue;
   margin: -13px auto 50px;
 
   @media (max-width: $desktop-width) {
@@ -63,9 +76,9 @@
     }
   }
 }
+
 .header__search {
   position: relative;
-  outline: 1px solid blue;
   width: 17.5%;
   order: -1;
 
@@ -115,7 +128,6 @@
   }
 }
 .header__nav {
-  outline: 1px solid blue;
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -146,19 +158,18 @@
     margin-bottom: 10px;
   }
 }
-.header__sub-nav {
-}
+
 .header__user-menu {
-  outline: 1px solid blue;
   width: 21.5%;
 
   @media (max-width: $desktop-width) {
-    width: 5.5%;
+    width: 2.5%;
   }
   @media (max-width: $tablet-width) {
-    width: 15%;
+    width: 9%;
   }
 }
+
 .header__burger-btn {
   display: none;
 
@@ -196,8 +207,8 @@
   color: $basic-white;
 }
 
-.header--js,
-.header--nojs {
+.header__container--nojs,
+.header__container--js {
   @media (max-width: $desktop-width) {
     display: flex;
     flex-direction: column;
@@ -252,7 +263,8 @@
   }
 }
 
-.header--nojs {
+.header--nojs,
+.header__container--nojs {
   @media (max-width: $desktop-width) {
     position: relative;
     min-height: 778px;
@@ -263,12 +275,19 @@
   }
 }
 
-.header--js {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  overflow: auto;
+.header--nojs {
+  @media (max-width: $desktop-width) {
+    margin-bottom: 0;
+  }
+}
+.header__container--js {
+  @media (max-width: $desktop-width) {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    overflow: auto;
+  }
 }
