--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,11 +1,20 @@
 .product-card {
   display: grid;
-  grid-template-rows: 284px auto;
-  grid-template-columns: 270px;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr;
 }
 
 .product-card__image {
   grid-row: 1 / 2;
+  min-height: 270px;
+
+  @media (max-width: $desktop-width) {
+    min-height: 324px;
+  }
+
+  @media (max-width: $tablet-width) {
+    min-height: 136px;
+  }
 }
 
 .product-card__description {
@@ -40,6 +49,7 @@
 .product-card__image picture,
 .product-card__image img {
   display: block;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
