--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -60,6 +60,7 @@
     @media (max-width: $tablet-width) {
       font-size: 34px;
       line-height: 36px;
+      letter-spacing: 0em;
     }
 
     & span {
@@ -67,11 +68,16 @@
       font-size: 45px;
       font-style: normal;
       line-height: 58px;
+      letter-spacing: 0.03em;
       text-transform: uppercase;
 
       @media (max-width: $tablet-width) {
         font-size: 38px;
         line-height: 47px;
+
+        & span {
+          letter-spacing: 0.03em;
+        }
       }
     }
   }
