--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -10,22 +10,35 @@
 }
 .gallery__link {
   margin: 30px 50px 62px;
+
+  @media (max-width: $desktop-width) {
+    margin-top: 19px;
+  }
+
+  @media (max-width: $tablet-width) {
+    margin-top: 24px;
+    margin-bottom: 45px;
+  }
 }
 
 .gallery__list {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 19.65% 15.9% 15.9% 19.65% 19.65%;
+  grid-template-rows: 49.6% 32.6%;
   column-gap: 27px;
-  row-gap: 34px;
+  row-gap: 32px;
+
+  @media (max-width: $desktop-width) {
+    column-gap: 16px;
+    row-gap: 20px;
+  }
 
   @media (max-width: $tablet-width) {
-    grid-gap: 15px;
+    row-gap: 26px;
+    column-gap: 24px;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    // grid-template-columns: 44.8% auto;
-    // grid-template-rows: 35% 24% 32%;
+    grid-template-rows: 35% 22% 24%;
   }
 }
 .gallery__item--big {
