--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -31,14 +31,14 @@
 }
 
 .main__gallery {
-  padding: 101px 96px 0;
+  padding: 101px 96px 130px;
 
   @media (max-width: $desktop-width) {
-    padding: 68px 45px 0;
+    padding: 68px 45px 80px;
   }
 
   @media (max-width: $tablet-width) {
-    padding: 53px 15px 0;
+    padding: 53px 15px 45px;
   }
 }
 
