--- a/source/sass/blocks/overlay.scss
+++ b/source/sass/blocks/overlay.scss
@@ -1,3 +1,14 @@
 .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: none;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba($bg-black, 0.5);
+  z-index: 1;
+
+  &--active {
+    display: block;
+  }
 }
