--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,5 +23,8 @@
 @import "blocks/footer-social.scss";
 @import "blocks/modal-login.scss";
 @import "blocks/overlay.scss";
+@import "blocks/catalog.scss";
+@import "blocks/products.scss";
+@import "blocks/paginator.scss";
 
 
