--- a/source/sass/blocks/paginator.scss
+++ b/source/sass/blocks/paginator.scss
@@ -14,6 +14,10 @@
   justify-content: center;
   width: 25%;
   box-sizing: border-box;
+
+  @media (max-width: $tablet-width) {
+    margin: 0 auto;
+  }
 }
 
 .paginator__prev {
@@ -21,6 +25,9 @@
 
   @media (max-width: $desktop-width) {
     margin-right: 189px;
+  }
+  @media (max-width: $tablet-width) {
+    display: none;
   }
 }
 
@@ -30,4 +37,8 @@
 
 .paginator__next {
   margin-left: auto;
+
+  @media (max-width: $tablet-width) {
+    display: none;
+  }
 }
