--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -3,8 +3,17 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
   column-gap: 30px;
+
+  @media (max-width: $tablet-width) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
+.products__item {
+  @media (max-width: $tablet-width) {
+    width: 100%;
+  }
+}
 .products .product-card__description {
   padding: 14px 0 27px;
 }
