--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@
 @import "blocks/blog.scss";
 @import "blocks/post.scss";
 @import "blocks/faq.scss";
+@import "blocks/accordion.scss";
 @import "blocks/gallery.scss";
 @import "blocks/footer.scss";
 @import "blocks/footer-nav.scss";
