--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
   column-gap: 30px;
+  row-gap: 27px;
 
   @media (max-width: $tablet-width) {
     grid-template-columns: repeat(2, 1fr);
@@ -16,5 +17,5 @@
   }
 }
 .products .product-card__description {
-  padding: 14px 0;
+  padding: 16px 0;
 }
