--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,8 @@
 @import "blocks/modal-login.scss";
 @import "blocks/overlay.scss";
 @import "blocks/catalog.scss";
+@import "blocks/filter.scss";
+@import "blocks/range.scss";
 @import "blocks/products.scss";
 @import "blocks/paginator.scss";
 
