--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -19,9 +19,11 @@
 
 .accordion--js .accordion__button {
   position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
-
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
@@ -30,13 +32,8 @@
   border: none;
   cursor: pointer;
 
-  &:focus,
   &:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-
-  &:active {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba($basic-black, 0.1);
   }
 
   @media (max-width: $desktop-width) {
