--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -12,10 +12,12 @@
     grid-template-areas: "filter" "items";
     grid-template-columns: 1fr;
     grid-template-rows: min-content 1fr;
+    gap: 52px;
   }
 
   @media (max-width: $tablet-width) {
     padding: 40px 15px 65px;
+    gap: 37px;
   }
 }
 
@@ -56,22 +58,34 @@
     width: 100%;
     box-sizing: border-box;
     border: 1px solid $basic-brown;
-    padding: 28px;
+    padding: 26px;
+    font-size: 16px;
     text-align: center;
     background-color: $basic-brown;
     color: $basic-white;
   }
+
+  @media (max-width: $tablet-width) {
+    padding: 21px 20px 23px;
+  }
 }
 
 .catalog__filter--nojs {
-  & .catalog__filter-button {
+  @media (max-width: $desktop-width) {
+    width: 80%;
+    margin: 0 auto;
 
-    @media (max-width: $desktop-width) {
+    & .catalog__filter-button {
       display: none;
     }
   }
+}
 
-  & .filter__head-button {
-    display: none;
+.catalog__filter--js {
+  @media (max-width: $desktop-width) {
+
+    & .catalog__filter-wrapper {
+      display: none;
+    }
   }
 }
