--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -5,9 +5,12 @@
   column-gap: 30px;
   row-gap: 27px;
 
+  @media (max-width: $desktop-width) {
+    row-gap: 25px;
+  }
   @media (max-width: $tablet-width) {
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 10px;
+    row-gap: 7px;
   }
 }
 
@@ -18,4 +21,8 @@
 }
 .products .product-card__description {
   padding: 16px 0;
+
+  @media (max-width: $tablet-width) {
+    padding: 18px 0;
+  }
 }
